--- a/pisgah/requirements.txt
+++ b/pisgah/requirements.txt
@@ -1,5 +1,7 @@
 fuzzywuzzy==0.5.0
-python-Levenshtein==0.12.0
+nltk==3.0.2
 python-dateutil==2.4.1
+python-Levenshtein==0.12.0
 six==1.9.0
+textblob==0.9.0
 twitter==1.16.0
