--- a/pisgah/requirements.txt
+++ b/pisgah/requirements.txt
@@ -1,7 +1,13 @@
+decorator==3.4.0
 fuzzywuzzy==0.5.0
+matplotlib==1.4.3
+networkx==1.9.1
 nltk==3.0.2
+nose==1.3.4
+numpy==1.9.2
+pyparsing==2.0.3
 python-dateutil==2.4.1
 python-Levenshtein==0.12.0
+pytz==2014.10
 six==1.9.0
-textblob==0.9.0
 twitter==1.16.0
