--- a/source/requirements.txt
+++ b/source/requirements.txt
@@ -1,13 +1,13 @@
-decorator==3.4.0
-fuzzywuzzy==0.5.0
-matplotlib==1.4.3
-networkx==1.9.1
-nltk==3.0.2
-nose==1.3.4
-numpy==1.9.2
-pyparsing==2.0.3
-python-dateutil==2.4.1
+cycler==0.9.0
+decorator==4.0.4
+fuzzywuzzy==0.8.0
+matplotlib==1.5.0
+networkx==1.10
+nltk==3.1
+numpy==1.10.1
+pyparsing==2.0.6
 python-Levenshtein==0.12.0
-pytz==2014.10
-six==1.9.0
-twitter==1.16.0
+python-dateutil==2.4.2
+pytz==2015.7
+six==1.10.0
+twitter==1.17.1
